k8s-specifications/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result
  name: result-service
spec:
  type: LoadBalancer
  ports:
  - name: "result-service"
    port: 80
    targetPort: 80
    nodePort: 31001
  selector:
    app: result
