k8s-specifications/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote-service
spec:
  type: LoadBalancer
  ports:
  - name: "vote-service"
    port: 80
    targetPort: 80
    nodePort: 31000
  selector:
    app: vote
